manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rexec
  namespace: kube-system
spec:
  sessionAffinity: ClientIP
  ports:
  - name: rexec
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: rexec
  type: ClusterIP
